[package]
name = "axconfig"
version.workspace = true
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Platform-specific constants and parameters for ArceOS"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axconfig"
documentation = "https://arceos-org.github.io/arceos/axconfig/index.html"

[build-dependencies]
toml_edit = "0.22"
indexmap = "=2.6.0"
serde = "1.0"
